src/ffi.rs


  // Header: phonenumber.pb.h
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_ByteSize(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_CheckTypeAndMergeFrom(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, from: *const ::message_lite::google::protobuf::MessageLite);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_Clear(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_CopyFrom(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, from: *const ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_CountryCodeSource_IsValid(value: libc::c_int) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_GetCachedSize(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_GetTypeName_as_ptr
    (this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_GetTypeName_to_output(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber, output: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_IsInitialized(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_MergeFrom(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, from: *const ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_New_arena
    (this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber,
     arena: *mut ::arena::google::protobuf::Arena)
     -> *mut ::phonenumber::i18n::phonenumbers::PhoneNumber;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_New_no_args
    (this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::phonenumber::i18n::phonenumbers::PhoneNumber;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_Swap(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, other: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_clear_country_code(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_clear_country_code_source(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_clear_extension(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_clear_italian_leading_zero(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_clear_national_number(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_clear_number_of_leading_zeros(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_clear_preferred_domestic_carrier_code(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_clear_raw_input(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_constructor_from(from: *const ::phonenumber::i18n::phonenumbers::PhoneNumber, output: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_constructor_no_args(output: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_country_code(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_country_code_source
    (this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> ::phonenumber::i18n::phonenumbers::PhoneNumberCountryCodeSource;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_default_instance
    ()
      -> *const ::phonenumber::i18n::phonenumbers::PhoneNumber;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_delete(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_destructor(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_extension
    (this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_has_country_code(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_has_country_code_source(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_has_extension(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_has_italian_leading_zero(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_has_national_number(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_has_number_of_leading_zeros(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_has_preferred_domestic_carrier_code(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_has_raw_input(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_italian_leading_zero(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_mutable_extension
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_mutable_preferred_domestic_carrier_code
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_mutable_raw_input
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_mutable_unknown_fields
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_national_number(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> libc::c_ulong;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_new_from
    (from: *const ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::phonenumber::i18n::phonenumbers::PhoneNumber;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_new_no_args
    ()
      -> *mut ::phonenumber::i18n::phonenumbers::PhoneNumber;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_number_of_leading_zeros(this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_operator_assign
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber,
     from: *const ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::phonenumber::i18n::phonenumbers::PhoneNumber;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_preferred_domestic_carrier_code
    (this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_raw_input
    (this_ptr: *const ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_release_extension
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_release_preferred_domestic_carrier_code
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_release_raw_input
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_allocated_extension(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, extension: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_allocated_preferred_domestic_carrier_code(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, preferred_domestic_carrier_code: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_allocated_raw_input(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, raw_input: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_country_code(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, value: libc::c_int);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_country_code_source(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, value: ::phonenumber::i18n::phonenumbers::PhoneNumberCountryCodeSource);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_extension_char(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_extension_char_unsigned_long(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_extension_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_italian_leading_zero(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, value: bool);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_national_number(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, value: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumber_set_number_of_leading_zeros(this_ptr: *mut ::phonenumber::i18n::phonenumbers::PhoneNumber, value: libc::c_int);
